--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,10 @@
-image:
-  file: .gitpod.Dockerfile
-
+# List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: mvn package
+  - command: | 
+      cd training
+      mvn package
+  
+# List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
+#ports:
+#  - port: 3000
+#    onOpen: open-preview
