--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
+    // Sonarlint: selenium-java-tests project binding
+    "sonarlint.connectedMode.project": {
+        "projectKey": "selenium-java-tests"
+    }
 }
