--- a/training/pom.xml
+++ b/training/pom.xml
@@ -3,12 +3,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>jto</groupId>
+  <groupId>swiftiris</groupId>
   <artifactId>training</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>training</name>
-  <url>https://www.justintung.com</url>
+  <url>https://github.com/justintungonline/selenium-java-tests</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
