--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,19 @@
 image:
   file: .gitpod.Dockerfile
-  
+
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - command: | 
+      chromium-browser --no-sandbox
       cd training
       mvn package
-  
+
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
-#ports:
-#  - port: 3000
-#    onOpen: open-preview
+ports:
+  - port: 6080
+    onOpen: open-preview
+  - port: 5900
+    onOpen: ignore
+  - port: 35900
+    onOpen: ignore
+
