--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,8 @@ image:
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - command: | 
-      chromium-browser --no-sandbox
       cd training
-      mvn package
+      mvn compile
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
@@ -16,4 +15,3 @@ ports:
     onOpen: ignore
   - port: 35900
     onOpen: ignore
-
