vscode: add copilot chat

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -19,7 +19,8 @@
 		"redhat.vscode-xml",
 		"dotjoshjohnson.xml",
 		"visualstudioexptteam.intellicode-api-usage-examples",
-		"vscjava.vscode-java-pack"
+		"vscjava.vscode-java-pack",
+		"github.copilot-chat"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
