--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,6 +16,7 @@ on:
 #    branches: [ "main" ]
 #  pull_request:
 #    branches: [ "main" ]
+  workflow_dispatch:
   schedule:
     - cron: '44 21 * * 4'
 
